# ComfyUI-Elegant-Resource-Monitor

./: .gitignore  LICENSE  README.md  __init__.py  dependency_installer.py  elegant_resource_monitor.py  get_temperature.py  pyproject.toml  requirements.txt
api/: dependency_installer.py  http_server.py
api/controllers/: gpu_usage_controller.py
web/assets/css/: styles.css
web/assets/js/: dependencies.js  elegant-base-server-node.js  elegant-resource-monitor-node.js  elegant-resource-monitor-service.js  elegant-resource-monitor.js  perf-monitor.js  script.js
web/comfyui/: elegant.css  elegant.js  svgs.js  utils_dom.js
web/templates/perf-monitor/: perf-monitor.html
