[project]
name = "comfyui-elegant-resource-monitor"
description = "This custom node for ComfyUI will add a simple and elegant resource monitor."
version = "1.0.10"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ChrisColeTech/ComfyUI-Elegant-Resource-Monitor"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "chriscoletech"
DisplayName = "ComfyUI-Elegant-Resource-Monitor"
Icon = "📈"
